Fix scrollbar "ungrab": the scrollbar would still react to hover events because signals that tracked pointer movement while dragging the handle were not correctly disconnected.

--- a/tests/style/default.css
+++ b/tests/style/default.css
@@ -82,3 +82,7 @@ NbtkScrollBar *#trough {
 NbtkScrollBar *#handle {
   background-color: black;
 }
+
+NbtkScrollBar *#handle:hover {
+  background-color: red;
+}
